--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -46,7 +46,6 @@
 \tl_new:N   \subfiglist_parsed_spec_tl
 \tl_new:N   \subfiglist_tokenized_spec_tl
 \tl_new:N   \subfiglist_dimensioned_spec_tl
-\tl_new:N   \subfiglist_option_unknown_message_name_tl
 \tl_new:N   \subfiglist_tmpa_tl
 \tl_new:N   \subfiglist_tmpb_tl
 
@@ -169,11 +168,14 @@
 \msg_new:nnn { subfiglist } { option~unknown }
   { Unknown~key~`#1'~in~optional~argument~of~#2. }
 
-\msg_new:nnn { subfiglist } { subfiglistsetup~option~unknown }
+\msg_new:nnn { subfiglist } { option~unknown~subfiglist }
+  { Unknown~key~`#1'~in~optional~argument~of~`\token_to_str:c { usepackage } { subfiglist }'. }
+
+\msg_new:nnn { subfiglist } { option~unknown~subfiglistsetup }
   { Unknown~key~`#1'~in~argument~of~`\token_to_str:c { subfiglistsetup }'. }
 
 \msg_new:nnn { subfiglist } { option~invalid }
-  { Option~`caption'~invalid~after~\@backslashchar begin{document}. }
+  { Option~`tweak-caption-package'~invalid~after~\token_to_str:c { begin } { document }. }
 
 \msg_new:nnn { subfiglist } { missing~separator }
   { Expected~specification~of~a~separator~after~token~`@'~in~argument~of~`subfiglist'~environment. }
@@ -272,178 +274,179 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Keys as options for package loading
-\keys_define:nn { subfiglist }
+\tl_map_inline:nn { { subfiglist } { subfiglistsetup } }
 {
-  % Tweak caption package for generation of labels?
-  tweak-caption-package.bool_set:N          = \subfiglist_tweak_caption_package_bool,
-  tweak-caption-package.default:n           = true,
-  
-  % Width of environment
-  environment-width.dim_set:N               = \subfiglist_env_width_document_default_dim,
-  environment-width.value_required:n        = true,
-  ew.meta:n                                 = { environment-width = #1 },
-  ew.value_required:n                       = true,
-  
-  % Use \hspace* to output space?
-  environment-use-hspace.bool_set:N        = \subfiglist_env_use_hspace_document_default_bool,
-  environment-use-hspace.default:n         = true,
-  euh.meta:n                               = { environment-use-hspace = #1 },
-  euh.default:n                            = true,
-  
-  % Space between canvases
-  canvas-space.dim_set:N                    = \subfiglist_canvas_space_document_default_dim,
-  canvas-space.value_required:n             = true,
-  cs.meta:n                                 = { canvas-space = #1 },
-  cs.value_required:n                       = true,
-  
-  % Space above canvas
-  canvas-top.dim_set:N                     = \subfiglist_canvas_top_document_default_dim,
-  canvas-top.value_required:n              = true,
-  ct.meta:n                                = { canvas-top = #1 },
-  ct.value_required:n                      = true,
-  
-  % Space below canvas
-  canvas-bottom.dim_set:N                  = \subfiglist_canvas_bot_document_default_dim,
-  canvas-bottom.value_required:n           = true,
-  cb.meta:n                                = { canvas-bottom = #1 },
-  cb.value_required:n                      = true,
-  
-  % Space left of canvas
-  canvas-left.dim_set:N                    = \subfiglist_canvas_left_document_default_dim,
-  canvas-left.value_required:n             = true,
-  cl.meta:n                                = { canvas-left = #1 },
-  cl.value_required:n                      = true,
-  
-  % Space right of canvas
-  canvas-right.dim_set:N                   = \subfiglist_canvas_right_document_default_dim,
-  canvas-right.value_required:n            = true,
-  cr.meta:n                                = { canvas-right = #1 },
-  cr.value_required:n                      = true,
-  
-  % Canvas margin
-  canvas-margin.meta:n                     = { canvas-top = #1, 
-                                               canvas-bottom = #1, 
-                                               canvas-left = #1,
-                                               canvas-right = #1 },
-  canvas-margin.value_required:n           = true,
-  cm.meta:n                                = { canvas-margin = #1 },
-  cm.value_required:n                      = true,
-  
-  % Canvas frame color
-  canvas-frame-color.tl_set:N              = \subfiglist_canvas_frame_color_document_default_tl,
-  canvas-frame-color.value_required:n      = true,
-  canvas-frame-colour.meta:n               = { canvas-frame-color = #1 },
-  canvas-frame-colour.value_required:n     = true,
-  cfc.meta:n                               = { canvas-frame-color = #1 },
-  cfc.value_required:n                     = true,
-  
-  % Canvas frame border width
-  canvas-frame-width.dim_set:N             = \subfiglist_canvas_frame_width_document_default_dim,
-  canvas-frame-width.value_required:n      = true,
-  cfw.meta:n                               = { canvas-frame-width = #1 },
-  cfw.value_required:n                     = true,
-  
-  % Canvas frame top separation
-  canvas-frame-top.dim_set:N               = \subfiglist_canvas_frame_top_document_default_dim,
-  canvas-frame-top.value_required:n        = true,
-  cft.meta:n                               = { canvas-frame-top = #1 },
-  cft.value_required:n                     = true,
-  
-  % Canvas frame bottom separation
-  canvas-frame-bottom.dim_set:N            = \subfiglist_canvas_frame_bottom_document_default_dim,
-  canvas-frame-bottom.value_required:n     = true,
-  cfb.meta:n                               = { canvas-frame-bottom = #1 },
-  cfb.value_required:n                     = true,
-  
-  % Canvas frame left separation
-  canvas-frame-left.dim_set:N              = \subfiglist_canvas_frame_left_document_default_dim,
-  canvas-frame-left.value_required:n       = true,
-  cfl.meta:n                               = { canvas-frame-left = #1 },
-  cfl.value_required:n                     = true,
-  
-  % Canvas frame right separation
-  canvas-frame-right.dim_set:N             = \subfiglist_canvas_frame_right_document_default_dim,
-  canvas-frame-right.value_required:n      = true,
-  cfr.meta:n                               = { canvas-frame-right = #1 },
-  cfr.value_required:n                     = true,
-  
-  % Canvas frame padding
-  canvas-frame-padding.meta:n              = { canvas-frame-top = #1, 
-                                               canvas-frame-bottom = #1, 
-                                               canvas-frame-left = #1,
-                                               canvas-frame-right = #1 },
-  canvas-frame-padding.value_required:n    = true,
-  cfp.meta:n                               = { canvas-frame-padding = #1 },
-  cfp.value_required:n                     = true,
-  
-  % Horizontal positioning of label (left, center, right)
-  label-hpos.choice:,
-  label-hpos.choices:nn                    = { l, c, r }
+  \keys_define:nn { #1 }
   {
-    \tl_clear_new:N \subfiglist_label_hpos_document_default_tl
-    \tl_set_eq:NN \subfiglist_label_hpos_document_default_tl \l_keys_choice_tl
-  },
-  label-hpos.value_required:n              = true,
-  lh.choice:,
-  lh.choices:nn                            = { l, c, r }
-  {
-    \tl_clear_new:N \subfiglist_label_hpos_document_default_tl
-    \tl_set_eq:NN \subfiglist_label_hpos_document_default_tl \l_keys_choice_tl
-  },
-  lh.value_required:n                      = true,
-  
-  % Vertical positioning of label (top, center, bottom)
-  label-vpos.choice:,
-  label-vpos.choices:nn                    = { t, c, b }
-  {
-    \tl_clear_new:N \subfiglist_label_vpos_document_default_tl
-    \tl_set_eq:NN \subfiglist_label_vpos_document_default_tl \l_keys_choice_tl
-  },
-  label-vpos.value_required:n              = true,
-  lv.choice:,
-  lv.choices:nn                            = { t, c, b }
-  {
-    \tl_clear_new:N \subfiglist_label_vpos_document_default_tl 
-    \tl_set_eq:NN \subfiglist_label_vpos_document_default_tl \l_keys_choice_tl
-  },
-  lv.value_required:n                      = true,
-  
-  % Horizontal shift of label
-  label-xshift.dim_set:N                   = \subfiglist_label_xshift_document_default_dim,
-  label-xshift.value_required:n            = true,
-  lx.meta:n                                = { label-xshift = #1 },
-  lx.value_required:n                      = true,
-  
-  % Vertical shift of label
-  label-yshift.dim_set:N                   = \subfiglist_label_yshift_document_default_dim,
-  label-yshift.value_required:n            = true,
-  ly.meta:n                                = { label-yshift = #1 },
-  ly.value_required:n                      = true,
-  
-  % Label color
-  label-color.tl_set:N                     = \subfiglist_label_color_document_default_tl,
-  label-color.value_required:n             = true,
-  label-colour.meta:n                      = { label-color = #1 },
-  label-colour.value_required:n            = true,
-  lc.meta:n                                = { label-color = #1 },
-  lc.value_required:n                      = true,
-  
-  % Label background
-  label-background.tl_set:N                = \subfiglist_label_background_document_default_tl,
-  label-background.value_required:n        = true,
-  lb.meta:n                                = { label-background = #1 },
-  lb.value_required:n                      = true,
-  
-  % Error catching
-  unknown.code:n                           =
-  {
-    \msg_error:nnVn { subfiglist } \subfiglist_option_unknown_message_name_tl
-      \l_keys_key_tl { subfiglist~package }
+    % Tweak caption package for generation of labels?
+    tweak-caption-package.bool_set:N          = \subfiglist_tweak_caption_package_bool,
+    tweak-caption-package.default:n           = true,
+    
+    % Width of environment
+    environment-width.dim_set:N               = \subfiglist_env_width_document_default_dim,
+    environment-width.value_required:n        = true,
+    ew.meta:n                                 = { environment-width = ##1 },
+    ew.value_required:n                       = true,
+    
+    % Use \hspace* to output space?
+    environment-use-hspace.bool_set:N        = \subfiglist_env_use_hspace_document_default_bool,
+    environment-use-hspace.default:n         = true,
+    euh.meta:n                               = { environment-use-hspace = ##1 },
+    euh.default:n                            = true,
+    
+    % Space between canvases
+    canvas-space.dim_set:N                    = \subfiglist_canvas_space_document_default_dim,
+    canvas-space.value_required:n             = true,
+    cs.meta:n                                 = { canvas-space = ##1 },
+    cs.value_required:n                       = true,
+    
+    % Space above canvas
+    canvas-top.dim_set:N                     = \subfiglist_canvas_top_document_default_dim,
+    canvas-top.value_required:n              = true,
+    ct.meta:n                                = { canvas-top = ##1 },
+    ct.value_required:n                      = true,
+    
+    % Space below canvas
+    canvas-bottom.dim_set:N                  = \subfiglist_canvas_bot_document_default_dim,
+    canvas-bottom.value_required:n           = true,
+    cb.meta:n                                = { canvas-bottom = ##1 },
+    cb.value_required:n                      = true,
+    
+    % Space left of canvas
+    canvas-left.dim_set:N                    = \subfiglist_canvas_left_document_default_dim,
+    canvas-left.value_required:n             = true,
+    cl.meta:n                                = { canvas-left = ##1 },
+    cl.value_required:n                      = true,
+    
+    % Space right of canvas
+    canvas-right.dim_set:N                   = \subfiglist_canvas_right_document_default_dim,
+    canvas-right.value_required:n            = true,
+    cr.meta:n                                = { canvas-right = ##1 },
+    cr.value_required:n                      = true,
+    
+    % Canvas margin
+    canvas-margin.meta:n                     = { canvas-top = ##1, 
+                                                 canvas-bottom = ##1, 
+                                                 canvas-left = ##1,
+                                                 canvas-right = ##1 },
+    canvas-margin.value_required:n           = true,
+    cm.meta:n                                = { canvas-margin = ##1 },
+    cm.value_required:n                      = true,
+    
+    % Canvas frame color
+    canvas-frame-color.tl_set:N              = \subfiglist_canvas_frame_color_document_default_tl,
+    canvas-frame-color.value_required:n      = true,
+    canvas-frame-colour.meta:n               = { canvas-frame-color = ##1 },
+    canvas-frame-colour.value_required:n     = true,
+    cfc.meta:n                               = { canvas-frame-color = ##1 },
+    cfc.value_required:n                     = true,
+    
+    % Canvas frame border width
+    canvas-frame-width.dim_set:N             = \subfiglist_canvas_frame_width_document_default_dim,
+    canvas-frame-width.value_required:n      = true,
+    cfw.meta:n                               = { canvas-frame-width = ##1 },
+    cfw.value_required:n                     = true,
+    
+    % Canvas frame top separation
+    canvas-frame-top.dim_set:N               = \subfiglist_canvas_frame_top_document_default_dim,
+    canvas-frame-top.value_required:n        = true,
+    cft.meta:n                               = { canvas-frame-top = ##1 },
+    cft.value_required:n                     = true,
+    
+    % Canvas frame bottom separation
+    canvas-frame-bottom.dim_set:N            = \subfiglist_canvas_frame_bottom_document_default_dim,
+    canvas-frame-bottom.value_required:n     = true,
+    cfb.meta:n                               = { canvas-frame-bottom = ##1 },
+    cfb.value_required:n                     = true,
+    
+    % Canvas frame left separation
+    canvas-frame-left.dim_set:N              = \subfiglist_canvas_frame_left_document_default_dim,
+    canvas-frame-left.value_required:n       = true,
+    cfl.meta:n                               = { canvas-frame-left = ##1 },
+    cfl.value_required:n                     = true,
+    
+    % Canvas frame right separation
+    canvas-frame-right.dim_set:N             = \subfiglist_canvas_frame_right_document_default_dim,
+    canvas-frame-right.value_required:n      = true,
+    cfr.meta:n                               = { canvas-frame-right = ##1 },
+    cfr.value_required:n                     = true,
+    
+    % Canvas frame padding
+    canvas-frame-padding.meta:n              = { canvas-frame-top = ##1, 
+                                                 canvas-frame-bottom = ##1, 
+                                                 canvas-frame-left = ##1,
+                                                 canvas-frame-right = ##1 },
+    canvas-frame-padding.value_required:n    = true,
+    cfp.meta:n                               = { canvas-frame-padding = ##1 },
+    cfp.value_required:n                     = true,
+    
+    % Horizontal positioning of label (left, center, right)
+    label-hpos.choice:,
+    label-hpos.choices:nn                    = { l, c, r }
+    {
+      \tl_clear_new:N \subfiglist_label_hpos_document_default_tl
+      \tl_set_eq:NN \subfiglist_label_hpos_document_default_tl \l_keys_choice_tl
+    },
+    label-hpos.value_required:n              = true,
+    lh.choice:,
+    lh.choices:nn                            = { l, c, r }
+    {
+      \tl_clear_new:N \subfiglist_label_hpos_document_default_tl
+      \tl_set_eq:NN \subfiglist_label_hpos_document_default_tl \l_keys_choice_tl
+    },
+    lh.value_required:n                      = true,
+    
+    % Vertical positioning of label (top, center, bottom)
+    label-vpos.choice:,
+    label-vpos.choices:nn                    = { t, c, b }
+    {
+      \tl_clear_new:N \subfiglist_label_vpos_document_default_tl
+      \tl_set_eq:NN \subfiglist_label_vpos_document_default_tl \l_keys_choice_tl
+    },
+    label-vpos.value_required:n              = true,
+    lv.choice:,
+    lv.choices:nn                            = { t, c, b }
+    {
+      \tl_clear_new:N \subfiglist_label_vpos_document_default_tl 
+      \tl_set_eq:NN \subfiglist_label_vpos_document_default_tl \l_keys_choice_tl
+    },
+    lv.value_required:n                      = true,
+    
+    % Horizontal shift of label
+    label-xshift.dim_set:N                   = \subfiglist_label_xshift_document_default_dim,
+    label-xshift.value_required:n            = true,
+    lx.meta:n                                = { label-xshift = ##1 },
+    lx.value_required:n                      = true,
+    
+    % Vertical shift of label
+    label-yshift.dim_set:N                   = \subfiglist_label_yshift_document_default_dim,
+    label-yshift.value_required:n            = true,
+    ly.meta:n                                = { label-yshift = ##1 },
+    ly.value_required:n                      = true,
+    
+    % Label color
+    label-color.tl_set:N                     = \subfiglist_label_color_document_default_tl,
+    label-color.value_required:n             = true,
+    label-colour.meta:n                      = { label-color = ##1 },
+    label-colour.value_required:n            = true,
+    lc.meta:n                                = { label-color = ##1 },
+    lc.value_required:n                      = true,
+    
+    % Label background
+    label-background.tl_set:N                = \subfiglist_label_background_document_default_tl,
+    label-background.value_required:n        = true,
+    lb.meta:n                                = { label-background = ##1 },
+    lb.value_required:n                      = true,
+    
+    % Error catching
+    unknown.code:n                           =
+    {
+      \msg_error:nnV { subfiglist } { option~unknown~ #1 } \l_keys_key_tl
+    }
   }
 }
 
 % Initialize and set keys
-\tl_set:Nn \subfiglist_option_unknown_message_name_tl { option~unknown }
 \keys_set:nn { subfiglist }
 {
   tweak-caption-package  = true,
@@ -472,9 +475,7 @@
 % Command for explicit manipulation of keys
 \NewDocumentCommand \subfiglistsetup { m }
 {
-  \tl_set:Nn \subfiglist_option_unknown_message_name_tl { subfiglistsetup~option~unknown }
-  \keys_set:nn { subfiglist } { #1 }
-  \tl_set:Nn \subfiglist_option_unknown_message_name_tl { option~unknown }
+  \keys_set:nn { subfiglistsetup } { #1 }
 }
 
 % Key to find out what number the number of the first choice
@@ -495,9 +496,12 @@
 \AtBeginDocument
 {
   % Disable option that decides whether to use caption package
-  \keys_define:nn { subfiglist }
+  \tl_map_inline:nn { { subfiglist } { subfiglistsetup } }
   {
-    caption.code:n = { \msg_error:nn { subfiglist } { option~invalid } }
+    \keys_define:nn { #1 }
+    {
+      tweak-caption-package.code:n = { \msg_error:nn { subfiglist } { option~invalid } }
+    }
   }
   
   % Derive command to put label inset from caption package
